Add npmrc in dockerfile

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "10.3.2",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "@pipets/validation-pipes": "^1.0.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "^16.4.5",
